# ex-tree-sitter

./: .gitignore  README.md  mix.exs
config/: config.exs
lib/: tree_sitter.ex
lib/tree_sitter/: document.ex  nif.ex  parser.ex  query.ex  tree.ex
native/ex_tree_sitter/: Cargo.toml  README.md
native/ex_tree_sitter/src/: atoms.rs  document.rs  error.rs  language.rs  lib.rs  parser.rs  query.rs
test/: tree_sitter_test.exs
