[package]
name = "ex_tree_sitter"
version = "0.1.0"
authors = ["Sean Cribbs <seancribbs@gmail.com>"]
edition = "2021"

[lib]
name = "ex_tree_sitter"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["elixir"]
css = ["tree-sitter-css"]
eex = ["embedded-template"]
embedded-template = ["tree-sitter-embedded-template"]
elixir = ["tree-sitter-elixir"]
erlang = ["tree-sitter-erlang"]
gleam = ["tree-sitter-gleam"]
html = ["tree-sitter-html"]
json = ["tree-sitter-json"]
sql = ["tree-sitter-sql"]
javascript = ["tree-sitter-javascript"]
typescript = ["tree-sitter-typescript"]

[dependencies]
rustler = { version = "0.30.0", features = ["nif_version_2_17"] }
rustler_sys = "*"
tree-sitter = "0.20.10"
tree-sitter-css = { version = "0.19.0", optional = true }
tree-sitter-elixir = { version = "0.1.0", optional = true }
tree-sitter-embedded-template = { version = "0.20.0", optional = true }
tree-sitter-erlang = { version = "0.2.0", optional = true }
tree-sitter-gleam = { git = "https://github.com/gleam-lang/tree-sitter-gleam.git", version = "0.30.4", optional = true }
tree-sitter-html = { version = "0.19.0", optional = true }
tree-sitter-javascript = { version = "0.20.1", optional = true }
tree-sitter-json = { version = "0.20.1", optional = true }
tree-sitter-sql = { version = "0.0.2", optional = true }
tree-sitter-typescript = { version = "0.20.3", optional = true }

[build-dependencies]
cc = "*"
